chore: r prefix for rendered vars,use latest 202509 version,use getFirst()